修复材质和补全语言